force-app/main/default/objects/Enquiry__c/fields/Competitor_Rate__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Rate__c</fullName>
    <label>Competitor Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>