force-app/main/default/objects/Enquiry__c/fields/No_of_Quotes__c.field-meta.xml
<CustomField>
    <fullName>No_of_Quotes__c</fullName>
    <label>No of Quotes</label>
    <summaryForeignKey>Quotation__c.Enquiry__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>