force-app/main/default/objects/Enquiry__c/fields/Teus__c.field-meta.xml
<CustomField>
    <fullName>Teus__c</fullName>
    <label>Teus</label>
    <summarizedField>Route__c.Teus__c</summarizedField>
    <summaryForeignKey>Route__c.Enquiry__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>