force-app/main/default/objects/Enquiry__c/validationRules/Closed_lost_reasoning.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_lost_reasoning</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c , &apos;Closed Lost&apos;), ISBLANK(Closed_Lost_Reason__c))</errorConditionFormula>
    <errorDisplayField>Closed_Lost_Reason__c</errorDisplayField>
    <errorMessage>Please fill out Closed Lost Reasoning</errorMessage>
</ValidationRule>